--- a/index/00-abstract.Rmd
+++ b/index/00-abstract.Rmd
@@ -3,12 +3,16 @@ body {
 text-align: justify}
 </style>
 
-This is copied from my TF application and will be edited.
+Higher body mass index (BMI) is a risk factor for thrombosis. Platelets are essential for haemostasis but contribute to thrombosis when activated pathologically. I aimed to assess the effect of BMI on platelet function and identify potential mechanisms which may mediate this effect by focusing on circulating plasma proteins. 
 
-Variation in adiposity is associated with thrombotic outcomes, but mechanisms leading from this exposure to disease are unclear. The overall aims were to assess the effect of adiposity on platelet function (key cells involved in thrombosis) and identify potential mechanisms. 
+In **Chapter \@ref(BMI-platelets-INTERVAL)** I used data from INTERVAL, a UK study of blood donors to explore the effect of BMI on platelet traits measured by the Sysmex XN-1000 haematology analyser. Observational and Mendelian randomization (MR) analyses in up to 33,388 participants suggested higher BMI raises immature platelet count (IPC), a measure of newly produced platelets. A follow-up analysis using a pre-cardiac surgery cohort (COPTIC) indicated that IPC was positively associated with whole blood platelet aggregation induced by platelet agonists (N=655).
 
-Data from INTERVAL (a UK study of blood donors), COPTIC (Bristol-based cardiac surgery cohort) and DiRECT (Diabetes REmission Clinical Trial in Glasgow/Newcastle) were used. The effect of body mass index (BMI) on platelet traits measured by Sysmex XN-1000 was assessed in INTERVAL (N=33,388) using Mendelian randomization (MR). The association between platelet traits and platelet function was explored using linear regression in COPTIC (N=655). Bariatric patient (BMI >40kg/m2) platelet function was also compared with controls (BMI 18.5-25kg/m2). MR evidence in INTERVAL suggested that higher BMI raises immature platelet count (IPC - newly produced platelets). Results from COPTIC indicated that greater IPC is associated with greater platelet aggregation. Validation work in a specifically designed study of bariatric patients and healthy weight controls is ongoing.
+Following on from these findings, a pilot patient study was initiated to develop laboratory methods to explore the effect of BMI on platelet function and signalling. This is presented in **Chapter \@ref(BMI-platelets-clinic)**. Patients due to undergo bariatric surgery (BMI >40 kg/m^2^), alongside age and sex matched controls (BMI 18.5-25 kg/m^2^), donated blood samples (N=4). Platelet function experiments were carried out on blood samples, and a platelet proteome analysis was performed on isolated platelets using mass spectrometry. Established methods need to replicated in a larger sample size.
 
-To identify the involvement of the circulating proteome in adiposity-related platelet changes, the causal effect of BMI on >3600 proteins measured by SomaLogic was estimated using MR (N=2,737). To complement this, the effect of weight loss on the serum proteome was examined using linear regression in the DiRECT cohort (N=265). Adiposity had a substantial effect on the plasma proteome: higher BMI raised levels of leptin and fumarylacetoacetase while reducing sex hormone binding-globulin levels. 
+Due to the chronic inflammatory effect of higher BMI, **Chapter \@ref(chemokine-platelets)** explored the effect of the chemokines macrophage-derived chemokine (MDC) and thymus and activation-regulated chemokine (TARC) on platelet function and signalling. MDC and TARC were able to potentiate platelet activation. Two sample MR provided causal estimates for the effect of higher circulating levels of MDC and TARC on disease. This analysis provided evidence that higher levels of MDC may contribute to venous thromboembolism.
 
-These analyses suggest that higher BMI raises immature platelet count (newly produced platelets), which are pro-thrombotic. The proteomic analyses from different study designs point towards potential proteins which may influence platelet production and function which require further investigation. Future analyses would include developing approaches to compare protein profiles across cohorts. Overall, these analyses provide novel mechanistic insight into how higher BMI causes disease.
+As circulating proteins were shown to activate platelets, the effect of BMI on the overall circulating profile was explored in **Chapter \@ref(BMI-protein-MR)**. This analysis was conducted on INTERVAL participants with proteomics measured by SomaLogic (N=2737). Here, observational and MR analyses were implemented to obtain causal estimates. Higher BMI was linked to effects on levels of proteins involved in appetite regulation, inflammation and sex hormones. Proteins which were most affect by BMI were enriched for genes involved in cardiovascular disease.
+
+A weight loss randomized control trial (RCT) called DiRECT was also implemented to evaluate the effect of BMI on the plasma proteome (N=146) in **Chapter \@ref(BMI-protein-RCT)**. Participants had their BMI and plasma proteome measured by SomaLogic at baseline and after one year of Type 2 Diabetes guideline care (control) or a total diet replacement (TDR) (intervention). Linear regression was used to explore effects as well as an instrumental variable analysis, using the treatment group as an instrument for BMI change. A reduction in BMI had a broad effect on the plasma proteome: proteomic changes were enriched for metabolic disease.
+
+The final results chapter **(Chapter \@ref(Comparison-proteome))** combined the results of the two previous chapters in attempt to identify consistent and divergent proteomic features across MR and weight loss RCT study designs. This chapter indicated that proteins which are altered in MR can be reversed with a reduction in BMI. There was evidence that BMI affects levels of proteins which may be indicative of a change in platelet function.
