--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -31,7 +31,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ```
 # The effect of obesity on platelet function: a clinical pilot study {#BMI-platelets-clinic}
 
-The following chapter reports a specifically designed patient study. Recruitment into this study has been severely affected by the pandemic as approvals were set in place to start recruitment in March 2020. All data in this chapter was collected by myself, apart from the platelet-neutrophil assay data, which was performed by Dr Chris Williams and the Sysmex haematology analyzer data, which was collected by Dr Kate Burley. Help was required here due to time constraints when receiving patient samples. Proteomic data were analysed by Dr Marieangela Wilson and Dr Kate Heesom at the Proteomics facility at the University of Bristol. Optimised methods have been used within a study to explore the effect of COVID-19 on platelet function given the increased risk of thrombosis. The COVID-19 research has been written up as a manuscript but it has not been included in the thesis due to not aligning with the current aims.
+The following chapter reports a specifically designed patient study. Recruitment into this study has been severely affected by the pandemic as approvals were set in place to start recruitment in March 2020. Further details of the initial plans for this study are provided in the discussion chapter (Chapter \@ref(Discussion)). The platelet-neutrophil assay data was performed by Dr Chris Williams and the Sysmex haematology analyzer data was collected by Dr Kate Burley. Help was required here due to time constraints when receiving patient samples. Proteomic data were analysed by Dr Marieangela Wilson and Dr Kate Heesom at the Proteomics facility at the University of Bristol. Analytical support was provided by Dr Phil Lewis from the Proteomics facility. Optimised methods have been used within a study to explore the effect of COVID-19 on platelet function given the increased risk of thrombosis. The COVID-19 research has been written up as a manuscript but it has not been included in the thesis due to not aligning with the current aims.
 
 ## Background
 
@@ -60,10 +60,10 @@ include_graphics(path = "figure/Bariatric_study/Thesis_graphic_overview_BMI_plat
 
 ## Materials and Methods
 ### Materials {#materials}
-Protease-activated receptor 1 (PAR-1)-activating peptide (TRAP-6/SFLLRN-NH2) was from Bachem (Bubendorf, Switzerland), crosslinked collagen-related peptide (CRP-XL) from Prof. Richard Farndale (Department of Biochemistry, University of Cambridge, UK). Adenosine diphosphate (ADP) was from Sigma-Aldrich (Poole, UK). cOmplete mini protease inhibitor tablets and phosSTOP phosphatase inhibitors were from Roche Life Sciences (Welwyn Garden City, UK). The Pierce bicinchoninic acid (BCA) assay was from ThermoFisher Scientific (Altrincham, UK). Sodium Citrate Vacutainer® tubes, FixLyse, PE-Cy5-conjugated mouse anti-human CD42b antibody, FITC mouse anti-human CD61 antibody, Fc block, PE mouse anti-human platelet GPVI antibody, FITC mouse anti-human PAC-1 and PE mouse anti-human CD62P antibodies were from BD (Wokingham, UK). FITC mouse anti-human CD41 and CD42b antibodies were from BioLegend (London, UK). Human MDC (69 amino acids) and TARC were from PeproTech (London, UK). Indomethacin, PGE1, Triton X-100, apyrase, HEPES Tyrode’s (10 mM HEPES, 1 mM magnesium, 0.5 mM monosodium phosphate, 145 mM sodium chloride, 3 mM potassium chloride, pH 7.2), 2-butanol, ethanol, methanol and bovine serum albumin (BSA) were purchased from Sigma-Aldridge (Poole, UK). Phosphate buffered saline (PBS), trisodium citrate, acid citrate dextrose (ACD), D-glucose, ammonium persulfate (APS), Tris buffered saline (TBS), polysorbate 20 (Tween 20), Donkey anti-Rabbit IgG (H+L) Highly Cross Adsorbed Secondary Antibody Alexa Fluor 647 and Fura-2 were purchased from Thermo Fisher Scientific (Loughborough, UK). 30 % acrylamide mix (37.5:1), 1.0 M Tris pH 6.8 solution and 1.5 M Tris pH 8.8 solution purchased from National Diagnostics (Nottingham, UK). Immobilon-FL PVDF membranes (0.45-micron filter) were purchased from Merck Millipore (Hertfordshire, UK). Sodium dodecyl sulphate (SDS) was purchased from GE Healthcare worldwide (Hatfield, UK). SDS solution (10 %), tetramethylethylenediamine (TEMED), filter paper and Precision Plus protein pre-stained standards were purchased from Bio-Rad laboratories (Bredbury, UK). Blocking buffer was purchased from LI-COR Biosciences (Cambridge, UK). Rabbit pSer239 VASP and pSer157 VASP antibodies and pSer425 Talin were purchased from Cell Signaling Technology (Hertfordshire, UK). Alexa Fluor 680 AffiniPure Donkey Anti-Goat IgG and Alexa Fluor 680 AffiniPure Donkey Anti-Rabbit IgG were obtained from Jackson Immunoresearch (Cambridgeshire, UK). Paraformaldehyde was purchased from Acros Organics (Geel, Belgium). Annexin V Alexa Fluor 568 conjugate was from ThermoFisher. The inhibitor AZD-2908 was from Bio-Techne, YM-284890 was from Tebu-Bio Ltd and Y27632 was from Generon Ltd.
+Protease-activated receptor 1 (PAR-1)-activating peptide (TRAP-6/SFLLRN-NH2) was from Bachem (Bubendorf, Switzerland), crosslinked collagen-related peptide (CRP-XL) from Prof. Richard Farndale (Department of Biochemistry, University of Cambridge, UK). Adenosine diphosphate (ADP) was from Sigma-Aldrich (Poole, UK). cOmplete mini protease inhibitor tablets and phosSTOP phosphatase inhibitors were from Roche Life Sciences (Welwyn Garden City, UK). The Pierce bicinchoninic acid (BCA) assay was from ThermoFisher Scientific (Altrincham, UK). Sodium Citrate Vacutainer® tubes, FixLyse, PE-Cy5-conjugated mouse anti-human CD42b antibody, FITC mouse anti-human CD61 antibody, Fc block, PE mouse anti-human platelet GPVI antibody, FITC mouse anti-human PAC-1 and PE mouse anti-human CD62P antibodies were from BD (Wokingham, UK). FITC mouse anti-human CD41 and CD42b antibodies were from BioLegend (London, UK). Human MDC (69 amino acids) and TARC were from PeproTech (London, UK). Indomethacin, PGE1, Triton X-100, apyrase, HEPES Tyrode’s (10 mM HEPES, 1 mM magnesium, 0.5 mM monosodium phosphate, 145 mM sodium chloride, 3 mM potassium chloride, pH 7.2), 2-butanol, ethanol, methanol and bovine serum albumin (BSA) were purchased from Sigma-Aldridge (Poole, UK). Phosphate buffered saline (PBS), trisodium citrate, acid citrate dextrose (ACD), D-glucose, ammonium persulfate (APS), Tris buffered saline (TBS), polysorbate 20 (Tween 20), Donkey anti-Rabbit IgG (H+L) Highly Cross Adsorbed Secondary Antibody Alexa Fluor 647 and Fura-2 were purchased from Thermo Fisher Scientific (Loughborough, UK). 30 % acrylamide mix (37.5:1), 1.0 M Tris pH 6.8 solution and 1.5 M Tris pH 8.8 solution purchased from National Diagnostics (Nottingham, UK). Immobilon-FL PVDF membranes (0.45-micron filter) were purchased from Merck Millipore (Hertfordshire, UK). Sodium dodecyl sulphate (SDS) was purchased from GE Healthcare worldwide (Hatfield, UK). SDS solution (10 %), tetramethylethylenediamine (TEMED), filter paper and Precision Plus protein pre-stained standards were purchased from Bio-Rad laboratories (Bredbury, UK). Blocking buffer was purchased from LI-COR Biosciences (Cambridge, UK). Rabbit pSer239 VASP and pSer157 VASP antibodies and pSer425 Talin were purchased from Cell Signaling Technology (Hertfordshire, UK). Alexa Fluor 680 AffiniPure Donkey Anti-Goat IgG and Alexa Fluor 680 AffiniPure Donkey Anti-Rabbit IgG were obtained from Jackson Immunoresearch (Cambridgeshire, UK). Paraformaldehyde was purchased from Acros Organics (Geel, Belgium). Annexin V Alexa Fluor 568 conjugate was from ThermoFisher. The inhibitor AZD-2908 was from Bio-Techne, YM-284890 was from Tebu-Bio Ltd and Y27632 was from Generon Ltd. Tween-20 (Sigma G02062) and hyrogenated gelatine (Sigma P1379) were from Sigma-Aldrich (Poole, UK). 
 
 ### Ethical approval process
-This study was designed in July 2019. To be able to carry out a patient study, there were various documents that needed to be prepared. These were submitted using the Integrated Research Application System (IRAS). Documents included were a research protocol, statistical review, IRAS form, consent forms, participant information sheets, GP letters, and a copy of the email invite sent out to control participants. Upon ethical approval from the London Riverside Research Ethics Committee (REC reference 19/LO/1781) and approval from Southmead Hospital, this study was first approved to start in March 2020. Recruitment was put on hold until May 2021 due to the pandemic. During this time, two amendments were made to be able to account for 1) whether the participant had previously had a COVID-19 infection and 2) whether the participant had been vaccinated for COVID-19. The second amendment was not approved by Southmead Hospital in time and therefore the vaccination status could not be recorded for bariatric patients.
+This study was designed in July 2019. To be able to carry out a patient study, there were various documents that needed to be prepared. These were submitted using the Integrated Research Application System (IRAS). Documents included were a research protocol, statistical review, IRAS form, consent forms and participant information sheets for bariatric patients and control subjects, GP letters and a copy of the email invite sent out to control participants. Upon ethical approval from the London Riverside Research Ethics Committee (REC reference 19/LO/1781) and approval from Southmead Hospital, this study was first approved to start recruitment in March 2020. Recruitment was put on hold until May 2021 due to the pandemic. During this time, two amendments were made to be able to account for: 1) whether the participant had previously had a COVID-19 infection and 2) whether the participant had been vaccinated for COVID-19 due to reports that COVID-19 infection and the AstraZeneca vaccine lead to an increased risk of thrombotic outcomes[@Middeldorp2020; @Scully2021]. The second amendment was not approved by Southmead Hospital in time and therefore the vaccination status could not be recorded for bariatric patients.
 
 ### Study population
 All participants provided written informed consent. Patients, who were due to undergo bariatric surgery, with a body mass index of >40kg/m^2^, were recruited from the Department of Bariatric and Metabolic Surgery at Southmead Hospital, Bristol. Control participants with a BMI between 18.5 and 25 kg/m^2^ were recruited from the University of Bristol. Inclusion criteria for participants were: aged 18 years and over, able to give written informed consent and sufficient level of English to understand the study and ask any questions. Participants were excluded if they were pregnant or lactating, had any known clotting or bleeding disorders (e.g. von Willebrand disease or drug-induced thrombocytopenia), or if they had taken any antiplatelet medication within the previous 14 days such as clopidogrel, ticagrelor or aspirin or any other non-steroidal anti-inflammatory drug (NSAID). Recruitment occurred between May 2021 and June 2021. As a pilot study, a total of four bariatric patients with obesity and four age and sex-matched control participants were recruited. Bariatric patients donated blood before bariatric surgery.
@@ -72,13 +72,16 @@ All participants provided written informed consent. Patients, who were due to un
 Blood was taken by venipuncture into vacutainers containing sodium citrate (3.2%). Blood was centrifuged (1000 RPM, 17 mins). PRP was diluted 1:40 in HEPES Tyrode's (145 mM NaCl, 3 mM KCl, 0.5 mM Na~2~HPO~4~, 1 mM MgS0~4~.7H~2~O, 10 mM HEPES, pH 7.4, 0.1% [w/v] D‐glucose) for experiments where indicated. 
 
 ### Platelet lysates 
-Acid citrate dextrose (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 RPM, 10 mins) to pellet platelets. Platelets were resuspended in CGS buffer (120 mM NaCl, 25.8 mM sodium citrate dihydrate, 0.1% [w/v] D‐glucose, 0.02 U/mL apyrase, pH 6.5) Platelets were centrifuged again (1700 RPM, 10 mins) to pellet platelets and were resuspended in CGS buffer. Platelets were pelleted and resuspended in radioimmunoprecipitation assay buffer (RIPA: 25 mM HEPES, 200 mM NaCL, 1mM EDTA, 1 % (v/v) NP40, 0.5 % (w/v) sodium deoxychelate, 0.1 % (w/v) SDS) supplemented with a protease and phosphatase inhibitor for 10 minutes on ice. Lysates were centrifuged (10000 RPM, 4°C for 5 minutes). Supernatant was removed and a bicinchoninic acid (BCA) assay was performed to calculate sample protein concentrations. Samples were stored in a -80°C freezer until proteomics analysis. 
+ACD (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 RPM, 10 mins) to pellet platelets. Platelets were resuspended in CGS buffer (120 mM NaCl, 25.8 mM sodium citrate dihydrate, 0.1% [w/v] D‐glucose, 0.02 U/mL apyrase, pH 6.5) Platelets were centrifuged again (1700 RPM, 10 mins) to pellet platelets and were resuspended in CGS buffer. Platelets were pelleted and resuspended in radioimmunoprecipitation assay buffer (RIPA: 25 mM HEPES, 200 mM NaCL, 1mM EDTA, 1 % (v/v) NP40, 0.5 % (w/v) sodium deoxychelate, 0.1 % (w/v) SDS) supplemented with a protease and phosphatase inhibitor for 10 minutes on ice. Lysates were centrifuged (10000 RPM, 4°C for 5 minutes). Supernatant was removed and a bicinchoninic acid (BCA) assay was performed to calculate sample protein concentrations. Samples were stored in a -80°C freezer until proteomics analysis. 
 
 ### Platelet parameters measured by Sysmex
 Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT) (x 10^9^/L), immature platelet fraction (IPF) (%), immature platelet count (IPC) (x 10^9^/L), side fluorescence (SFL, a measure of mRNA content in relative fluorescent units/RFUs), forward scatter (FSC, a measure of platelet size measured in RFUs) and side scatter (SSC, a measure of granularity in RFUs).
 
+### Freeze-dried agonist plates
+Agonist was freeze dried onto plates to reduce day-to-day variation in agonist concentrations, as described previously [@Chan2018]. 96 well plates were coated with 10 mM PBS with 0.75% w/v hydrogenated gelatine and 0.05% v/v Tween-20 with a pH of 0.74 and left for 4 hours at room temperature. Plates were washed with dH~2~O with 0.01% v/v, followed by two washes with dH~2~O and left to dry in a fume hood. Agonist was added to the plates (5uL per well at 10x final concentration): agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP). Plates were then stored in a -80°C freezer for 1 hour, then placed into the freeze dryer (-50°C) and left overnight. Once freeze-dried, plates were vacuum packed.
+
 ### Integrin α~IIb~β~3~ activation and P-selectin expression measured by flow cytometry
-Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-conjugated CD62P antibodies were added in a 2:1 ratio (5uL PAC1 and 2.5uL CD62P per well). This master mix was added to pre-prepared vacuum packed 96 well plates to a final folume of 50 uL. Agonists used were protease-activated receptor 1 activating protein (PAR1-AP), adenosine diphosphate (ADP) and collagen related peptide (CRP), which were freeze-dried onto the plates[@Chan2018]. HEPES Tyrode's was also freeze-dried onto plates, which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. Platelets were fixed with 1% paraformaldehyde (PFA) for 10 minutes. Platelets were gated and the median fluorescence intensity (MFI) in arbitrary units (AUs) was reported from a total of 10,000 events.
+Isolated PRP was diluted 1:40 in HEPES Tyrode's. FITC-conjugated PAC1 and PE-conjugated CD62P antibodies were added in a 2:1 ratio (5uL PAC1 and 2.5uL CD62P per well). This master mix was added to pre-prepared vacuum packed 96 well plates with freeze-dried agonist to a final folume of 50 uL. HEPES Tyrode's was also freeze-dried onto plates, which was used for a measurement of unstimulated integrin α~IIb~β~3~ activation and P-selectin expression. Platelets were stimulated with agonists for 10 minutes. Platelets were fixed with 1% paraformaldehyde (PFA) for 10 minutes. Platelets were gated and the median fluorescence intensity (MFI) in arbitrary units (AUs) was reported from a total of 10,000 events.
 
 ### Surface receptor levels measured by flow cytometry
 Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibodies were added (1:10 v/v) to a final volume of 50 uL. Antibodies used include anti-human CD41 (α~IIb~), CD42b (GP1bα), CD61 (β~3~) (FITC-conjugated) and GPVI and CD110 (thrombopoietin/TPO receptor) (PE-conjugated). Platelets were fixed with 1% PFA for 10 minutes. Platelets were gated and the MFI was reported in AUs from a total of 10,000 events. 
@@ -87,13 +90,13 @@ Diluted PRP (1:40) was used for unstimulated surface receptor detection. Antibod
 Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer and incubated with FITC-conjugated anti-CD41 and PE-conjugated anti-C45 antibodies at room temperature for 15 mins (antibodies used 1:10 v/v). Samples were either stimulated (+ 5 ug/mL CRP) or unstimulated (+ vehicle) for the same 15 minute duration. Samples were fixed with FixLyse for 10 minutes, followed by a final concentration of 4 % PFA for 10 minutes. Fluorescence was quantified using the flow cytometer, where 1000 neutrophil events were analysed based on a gating of CD45 and SSC parameters. Aggregates of platelets and neutrophils were defined by being both CD41+ and CD45+.
 
 ### Tandem Mass Tag Mass Spectrometry (TMT-MS) quantification of platelet proteins
-Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific).
+Platelet lysate samples (50 ug total protein) were digested with trypsin and labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled. The pooled sample was evaporated to dryness then resuspended in formic acid (5%). The pooled sample was then desalted using a SepPak cartridge (Waters, Milford, Massachussetts, USA). Eluate from the SepPak cartridge was evaporated to dryness and resuspended prior to fractionation by high pH reversed-phase chromatography using an Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ulitamte 3000 nano-LC system in line with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific). Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
 
 ### Statistical analysis for platelet function assays
-Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant'[@Sterne2001]. 
+Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant'[@Sterne2001], especially as the current study has low power. 
 
 ### Analysis of proteomic data
-A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P values were not adjusted for multiple testing, however P values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). False discovery rate (FDR) adjusted p-values are also provided in the full results . A positive logFC indicates an increase in protein level in the bariatric samples.
+A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log2 normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P-values were not adjusted for multiple testing, due to the observation that false discovery rate (FDR) adjustment may be too blunt in low power proteomics experiments[@Pascovici2016]. P-values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). (FDR) adjusted p-values are also provided in the full results as a reference. A positive logFC indicates an increase in protein level in the bariatric samples.
 
 ## Results
 
@@ -102,26 +105,27 @@ The characteristics of participants included in the study are shown in Table  \@
 
 (ref:caption-obesity-platelets-participants) **Characteristics of included participants in the body mass index and platelet function study**
 (ref:scaption-obesity-platelets-participants) Characteristics of included participants in the body mass index and platelet function study
-```{r obesity-platelets-participants,  echo=FALSE}
+```{r obesity-platelets-participants,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
-f = c("Age", "Sex", "Body mass index (kg/m^2^)", "Smoker", "Hypertensive (140/90 mmHg)", "Type 2 Diabetes", "Type 2 Diabetes medication", "Metformin", "Dapagliflozin", "Dulaglutide", "Previous COVID-19 infection")
+f = c("Age", "Sex", "Body mass index (kg/m2)", "Smoker", "Hypertensive (140/90 mmHg)", "Type 2 Diabetes", "Type 2 Diabetes medication", "Metformin", "Dapagliflozin", "Dulaglutide", "Previous COVID-19 infection")
 co = c("42.2 (14.1)", "75 %", "21.8 (2.1)", "0 %", "0 %", "0 %", "NA", NA, NA,NA, "0 %")
 i = c('46 (18.0)','75 %','49.3 (8.8)','0 %','25 %','50 %', NA, '25 %','25 %','25 %','75 %')
 p <- c(0.77,1.0,0.0009,1.0,1.0,0.43,"NA", NA, NA, NA, 0.14) 
 mytable = data.frame("Variable"  = f, "Control mean (SD) or %" = co, "Bariatric patient mean (SD) or %" = i, "P value for difference" = p)
 colnames(mytable) <- c('Variable', "Control mean (SD) or %", "Bariatric patient mean (SD) or %", "P value for difference" )
-mytable %>% kable(caption = "(ref:caption-obesity-platelets-participants)", format = "latex", booktabs = TRUE, caption.short = "(ref:scaption-obesity-platelets-participants)") %>% 
+mytable %>% kable(caption = "(ref:caption-obesity-platelets-participants)", format = "latex", booktabs = TRUE, caption.short = "(ref:scaption-obesity-platelets-participants)") %>%
   kable_classic_2(full_width = F) %>%
-  #kable_paper("hover", full_width = F)
+  kable_paper("hover", full_width = F) %>%
    add_indent(c(8, 9, 10), level_of_indent = 1) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "5cm")
+ column_spec(1, width = "5cm")
 ```
 
 ### Platelet parameters
 
 Platelet traits measured by Sysmex were compared across bariatric and control groups (Table \@ref(tab:obesity-platelets-parameters)). There was no statistical evidence for an effect of obesity on platelet parameters. However, IPC and IPF did display larger mean values compared to controls, but they also had relatively large SDs in the bariatric patient group (IPC 9.3 (SD 4.9) x 10^9^/L in control vs 16.3 (SD 16.3) x 10^9^/L in bariatric group, p=0.45).
 
+\blandscape
 (ref:caption-obesity-platelets-parameters) **Comparison of platelet traits measured by Sysmex XE-2100 across bariatric and control groups**
 (ref:scaption-obesity-platelets-parameters) Comparison of platelet traits measured by Sysmex XE-2100 across bariatric and control groups
 ```{r obesity-platelets-parameters,  echo=FALSE, warning=FALSE}
@@ -132,12 +136,13 @@ i = c("235.8 (61.5)", "7.3 (8.3)", "16.3 (16.3)", "85.1 (9.8)", "60.5 (8.8)", "4
 p <- c(0.54,0.44,0.45,0.61,0.24,0.37) 
 mytable = data.frame("Platelet trait"  = f, "Control mean (SD) or %" = co, "Bariatric patient mean (SD) or %" = i, "P value for difference" = p)
 colnames(mytable) <- c('Variable', "Control mean (SD)", "Bariatric patient mean (SD)", "P value for difference" )
-mytable %>% kable(caption = "(ref:caption-obesity-platelets-parameters)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-obesity-platelets-parameters)") %>%  kable_classic_2(full_width = F) %>%
+mytable %>% kable(caption = "(ref:caption-obesity-platelets-parameters)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-obesity-platelets-parameters)") %>%  kable_classic_2(full_width = F)
   #kable_paper("hover", full_width = F)
- kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "5cm")
+ #kable_styling(full_width = TRUE) %>%
+#column_spec(1, width = "5cm")
 
 ```
+\elandscape
 
 ### Basal receptors
 Activation of the integrin α~IIb~β~3~ and expression of P-selectin were compared across bariatric and control groups to see whether there was a difference in basal platelet activation. Basal integrin α~IIb~β~3~ activation and P-selectin expression were similar across groups (Figures \@ref(fig:basal-integrin-pselectin-receptor-bariatric)A and B). Expression of other platelet surface receptors in unstimulated platelets were also compared using specific antibodies. Levels of GPVI, CD42b (GP1bα), CD41 (integrin α~IIb~), CD61 (Integrin β~3~) and CD110 (thrombopoietin/TPO receptor) were not different across groups (Figure \@ref(fig:basal-integrin-pselectin-receptor-bariatric)C). 
