--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -57,15 +57,15 @@ The present study was conducted on a random subset of participants from INTERVAL
 
 ### Measurement of circulating proteins
 
-Plasma proteins were measured in INTERVAL participants at baseline (before randomisation of assignment to the time interval between blood donation) using the SomaScan® by SomaLogic[@Sun2018]. This platform uses 4034 modified nucleotides known as Slow Off-rate Modified Aptamers (SOMAmers) which make direct contact with proteins, enabling detection of 3622 unique proteins or protein complexes and quantifies them using a DNA microarray[@Rohloff2014]. Separate SOMAmers can bind to isoforms of the same protein, but can also bind to the same protein at different sites (which can be impacted by post-translational modifications or complexes formed with other proteins). We therefore have included all 4034 SOMAmers. The extensive number of proteins measured, with no missingness and in a cohort of 2737 participants, provides a rich proteomic dataset. The proteins were measured in relative fluorescence units (RFUs) and quality control (QC) was performed as described by Sun et al.[@Sun2018]. There was no missingness across protein variables. The proteomic data used had been pre-adjusted (using linear regression) for age, sex, duration between blood draw and sample processing (1 day or less vs >1 day), and the first three genetic principal components, with the residuals inverse normal rank transformed. All following analyses use this 'pre-adjusted' data as input.
+Plasma proteins were measured in INTERVAL participants at baseline (before randomisation of assignment to the time interval between blood donation) using the SomaScan® by SomaLogic[@Sun2018]. This platform uses 4034 modified nucleotides known as Slow Off-rate Modified Aptamers (SOMAmers) which make direct contact with proteins, enabling detection of 3622 unique proteins or protein complexes and quantifies them using a DNA microarray[@Rohloff2014]. Separate SOMAmers can bind to isoforms of the same protein, but can also bind to the same protein at different sites (which can be impacted by post-translational modifications or complexes formed with other proteins). All 4034 SOMAmers were therefore included. The extensive number of proteins measured, with no missingness and in a cohort of 2737 participants, provides a rich proteomic dataset. The proteins were measured in relative fluorescence units (RFUs) and quality control (QC) was performed as described by Sun et al.[@Sun2018]. There was no missingness across protein variables. The proteomic data used had been pre-adjusted (using linear regression) for age, sex, duration between blood draw and sample processing (1 day or less vs >1 day), and the first three genetic principal components, with the residuals inverse normal rank transformed. All following analyses use this 'pre-adjusted' data as input.
 
 ### Statistical analyses
 
 The population characteristics of INTERVAL participants with SomaLogic data who were included in this study (N range: 2422 to 2737 due to missing data for covariables) were compared to those INTERVAL participants who were not included (N range: 27174 to 30721) to assess generalisability of any BMI-protein associations to the wider INTERVAL sample. Population characteristics evaluated were age, sex, weight, height, BMI, smoking frequency, and alcohol intake. Differences in population characteristics among the two INTERVAL sub-sets were tested by a two-sided t-test for continuous traits and a two-sided Chi-square test for categorical variables. Observational analyses were conducted using linear regression to examine associations between BMI (in normalized standard deviation (SD) units based on a rank normal transformation (rntransform() from "moosefun" package https://github.com/hughesevoanth/moosefun) and each standardised protein trait as a dependent (outcome) variable. Two linear models were used (using lm() function from R "stats" package): 1) adjusted for age and sex and 2) additionally adjusted for smoking and alcohol consumption (each as an ordered categorical variable). Given that the procedure which generates the "pre-adjusted" data (adjustment for covariables before rank normal transformation of proteins) can reintroduce correlations[@Pain2018], age and sex are again used as covariables here. The estimates derived from models 1) and 2) therefore reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. Associations of covariables with BMI and protein traits were also examined using linear regression.
 
-A Shapiro-Wilk test was used to confirm whether the GRS showed a normal distribution. MR analyses were conducted using two-stage least squares (2SLS) regression models with robust standard errors, using the systemfit function as part of the systemfit package[@Henningsen2007], with measured BMI in SD units and the GRS for BMI as the instrumental variable. These MR estimates reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. We report estimates from the direct linear associations between BMI and proteins as "observational" estimates and those from the 2SLS causal effect estimates as "MR estimates". Agreement between observational and MR estimates was examined using a separate linear regression. This was performed: 1) for all proteins, and 2) excluding the proteins that fell below our P-value reference point for strong evidence (defined below) to examine whether agreement is limited to "top hits" or applies throughout the effect distribution. Agreement between observational estimates and MR estimates would suggest that there are causal effects of BMI across the general proteome, with differences in estimates suggesting confounding of observational estimates. 
+A Shapiro-Wilk test was used to confirm whether the GRS showed a normal distribution. MR analyses were conducted using two-stage least squares (2SLS) regression models with robust standard errors, using the systemfit function as part of the systemfit package[@Henningsen2007], with measured BMI in SD units and the GRS for BMI as the instrumental variable. These MR estimates reflect the normalized SD-unit difference in each protein trait per normalized SD-unit (4.8 kg/m^2^) higher BMI. Estimates are reported from the direct linear associations between BMI and proteins as "observational" estimates and those from the 2SLS causal effect estimates as "MR estimates". Agreement between observational and MR estimates was examined using a separate linear regression. This was performed: 1) for all proteins, and 2) excluding the proteins that fell below our P-value reference point for strong evidence (defined below) to examine whether agreement is limited to "top hits" or applies throughout the effect distribution. Agreement between observational estimates and MR estimates would suggest that there are causal effects of BMI across the general proteome, with differences in estimates suggesting confounding of observational estimates. 
 
-To account for multiple testing, a Bonferroni correction was used to adjust results. This was informed by the correlation between proteins, adjusting only for the estimated number of independent traits (Figure \@ref(fig:Corr-mat-proteins)). Correlation was assessed by a Spearman’s correlation matrix. From a starting number of 4034, the number of independent proteins was  3655 (using a correlation cut-off of r  = 0.8 or tree cut height = 0.2 between proteins, Figure \@ref(fig:Dend-proteins)), dendrogram made using  "iPVs" package https://github.com/hughesevoanth/iPVs). We utilised a Bonferroni adjusted P-value of 0.05/3655 = 1.4x10^-5^ to indicate strong evidence in this sample. Full results are presented in the supplementary material. 
+To account for multiple testing, a Bonferroni correction was used to adjust results. This was informed by the correlation between proteins, adjusting only for the estimated number of independent traits (Figure \@ref(fig:Corr-mat-proteins)). Correlation was assessed by a Spearman’s correlation matrix. From a starting number of 4034, the number of independent proteins was  3655 (using a correlation cut-off of r  = 0.8 or tree cut height = 0.2 between proteins, Figure \@ref(fig:Dend-proteins)), dendrogram made using  "iPVs" package https://github.com/hughesevoanth/iPVs). A Bonferroni adjusted P-value of 0.05/3655 = 1.4x10^-5^ was utilised to indicate strong evidence in this sample. Full results are presented in the supplementary material. 
 
 (ref:caption-Corr-mat-proteins) **Correlation matrix of all protein traits analysed by SomaLogic (4,034)**. The colour corresponds to the correlation coefficient ranging from 1 (dark blue) to -1 (dark red).
 (ref:scaption-Corr-mat-proteins) Correlation matrix of all protein traits analysed by SomaLogic
@@ -84,7 +84,7 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/dendrogram.pdf", dpi = NA)
 The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins. As the chemokines MDC and TARC were explored in the previous chapter, the specific effects of BMI on MDC and TARC were looked up.
 
 ### Enrichment analysis
-To investigate whether any protein groups showed a particularly strong relationship with BMI and disease (signal detection), protein features were clustered for further analysis. First, a principal component analysis (PCA; prcomp() function from the R "stats" package) on the proteins, not the individuals, was performed on the "pre-adjusted" (see above) dataset (Figure \@ref(fig:PCs)A-D). The top "n" PC eigenvectors, as identified by a scree plot of the PCA eigenvalues (Figure \@ref(fig:PCs)E), were carried forward into an unsupervised k-means analysis (kmeans() function from the R "stats" package). Nineteen k-means analyses were run altering the value of k (number of clusters) from two to 20. To identify an appropriate number of protein clusters (k) we generated a scree like plot (Figure \@ref(fig:PCs)F). Here we plotted the variance explained by clusters, for each k, as estimated as the sum of squares explained by clusters (betweenness) over the total sums of squares, and looked for the smallest k with the maximum variance explained (a plateau). In summary, we used a data reduction method (PCA) to identify major axes (PCs) of the protein data that were then utilised in a machine learning clustering algorithm (k-means) to identify clusters of proteins that share abundance similarities across individuals.
+To investigate whether any protein groups showed a particularly strong relationship with BMI and disease (signal detection), protein features were clustered for further analysis. First, a principal component analysis (PCA; prcomp() function from the R "stats" package) on the proteins, not the individuals, was performed on the "pre-adjusted" (see above) dataset (Figure \@ref(fig:PCs)A-D). The top "n" PC eigenvectors, as identified by a scree plot of the PCA eigenvalues (Figure \@ref(fig:PCs)E), were carried forward into an unsupervised k-means analysis (kmeans() function from the R "stats" package). Nineteen k-means analyses were run altering the value of k (number of clusters) from two to 20. To identify an appropriate number of protein clusters (k) a scree like plot was generated (Figure \@ref(fig:PCs)F). Here the variance explained by clusters was plotted, for each k, as estimated as the sum of squares explained by clusters (betweenness) over the total sums of squares, and looked for the smallest k with the maximum variance explained (a plateau). In summary, a data reduction method (PCA) was used to identify major axes (PCs) of the protein data that were then utilised in a machine learning clustering algorithm (k-means) to identify clusters of proteins that share abundance similarities across individuals.
 
 (ref:caption-PCs) **Principal component analysis (PCA) and k-means clustering of proteins.** Principal component analysis (PCA) and k-means clustering of proteins provide evidence for five clusters. A-D) Principal component (PC) 1 vs PC2-PC5 for the study protein data. Each dot represents a protein, and the colors represent the clusters identified by the k-means analysis (1=black, 2=red, 3=green, 4=dark blue, 5=light blue, 6=pink). E) PC scree plot displaying the proportion of variance explained by each of the first 20 PCs. F) K-means scree like plot displaying the variance explained by clusters for each of the 19 k-means analysis, where in each analysis k (the number of clusters) was set from two to 20.
 (ref:scaption-PCs) Principal component analysis (PCA) and k-means clustering of proteins
@@ -103,19 +103,19 @@ INTERVAL participants included in this study (those with proteomic data), had a 
 
 (ref:caption-Inc-excl-part) **Comparison of included vs excluded INTERVAL participants for the BMI-proteome analysis**
 (ref:scaption-Inc-excl-part) Comparison of included vs excluded INTERVAL participants for the BMI-proteome analysis
-```{r Inc-excl-part,  echo=FALSE}
+```{r Inc-excl-part,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
-var = c("Age", "Sex", "Male", "Female", "Weight (kg)", "Height (cm)", "Body mass index (kg/m^2^)", "Smoking frequency", "Never", "Occasional", "Most days or every day", "Alcohol intake frequency", "Rarely", "Less than once a week", "One or two times a week", "Three to five times a week / most days")
+var = c("Age", "Sex", "Male", "Female", "Weight (kg)", "Height (cm)", "Body mass index (kg/m2)", "Smoking frequency", "Never", "Occasional", "Most days or every day", "Alcohol intake frequency", "Rarely", "Less than once a week", "One or two times a week", "Three to five times a week / most days")
 incmean = c('45.0 (14.1)', NA, '51.70%','48.30%','78.5 (16.1)','172.7 (9.7)','25.9 (4.8)', NA, '59.10%','11.90%','29.00%', NA, '11.70%','16.90%','37.40%','34.10%')
 ninc = c(2737, 2737, NA, NA, 2736, 2730, 2729, 2675, NA, NA, NA, 2422, NA, NA, NA, NA)
 excmean = c('44.9 (14.2)', NA, '49.70%','50.30%','78.6 (16.0)','172.2 (9.6)','26.4 (4.7)', NA, '59.40%','12.00%','28.50%', NA,'12.60%','17.10%','37.70%','32.50%')
 excn <- c(30721, 30721, NA, NA, 30719, 30661, 30659, 29958, NA, NA, NA, 27124, NA, NA, NA, NA)
 ChiP <- c(0.76, 0.04, NA, NA, 0.26, 0.005, 0.66, 0.88, NA, NA, NA, 0.34, NA, NA, NA, NA)
 mytable = cbind(var, incmean, ninc, excmean, excn, ChiP)
-colnames(mytable) <- c("Variable",  "Included Mean (SD) or %", "Included N", "Excluded Mean (SD) or %", "Excluded N", "P value for difference (Two tailed t-test or Chi2 test)" )
-mytable %>% kable(caption = "(ref:caption-Inc-excl-part)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Inc-excl-part)") %>% 
+colnames(mytable) <- c("Variable",  "Included Mean (SD) or %", "Included N", "Excluded Mean (SD) or %", "Excluded N", "P value for difference (Two tailed t-test or Chi^2^ test)" )
+mytable %>% kable(caption = "(ref:caption-Inc-excl-part)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Inc-excl-part)") %>%
   kable_classic_2(full_width = F) %>%
-  #kable_paper("hover", full_width = F)
+  kable_paper("hover", full_width = F) %>%
    add_indent(c(3, 4, 9, 10, 11, 13, 14, 15, 16), level_of_indent = 1) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "6cm") %>%
@@ -134,7 +134,7 @@ Age, sex, and frequencies of smoking and alcohol intake were each associated wit
 
 (ref:caption-INT-confounders-BMI) **Associations between covariables (exposure) and standardised BMI (outcome)**
 (ref:scaption-INT-confounders-BMI) Associations between covariables (exposure) and standardised BMI (outcome)
-```{r INT-confounders-BMI,  echo=FALSE}
+```{r INT-confounders-BMI,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 V = c( "Age (years)", "Sex (1=female, 2=male)", "Smoking frequency (1=never, 2=occasinal, 3=most days/ every day)", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)")
 N = c(2729, 2729, 2667, 2415)
@@ -147,8 +147,8 @@ CI <- c(0.003, 0.075, 0.043, 0.041)
 LowerCI <- c(0.009, 0.10, 0.05, -0.12)
 UpperCI <- c(0.015, 0.25, 0.13, -0.04)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
-mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI)") %>% 
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
+mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
@@ -169,9 +169,9 @@ The distribution of the GRS among participants was normal (mean=0.08, SD=0.29, W
 
 (ref:caption-INT-GRS-confounders) **Associations of the genetic risk score for BMI with reported BMI and covariables**
 (ref:scaption-INT-GRS-confounders) Associations of the genetic risk score for BMI with reported BMI and covariables
-```{r INT-GRS-confounders,  echo=FALSE}
+```{r INT-GRS-confounders,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
-V = c("BMI (SDs)", "BMI (kg/m^2^)", "Age", "Sex (1=female, 2=male)", "Smoking frequency (1=never, 2=occasinal, 3=most days/ every day)", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)")
+V = c("BMI (SDs)", "BMI (kg/m2)", "Age", "Sex (1=female, 2=male)", "Smoking frequency (1=never, 2=occasinal, 3=most days/ every day)", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)")
 N = c(2729, 2729, 2737, 2737, 2675, 2422)
 B = c(0.57, 2.54, -1.47, -0.04, -0.02, -0.06)
 SE <- c(0.06, 0.31, 0.92, 0.03, 0.14, 0.07)
@@ -179,8 +179,8 @@ P <- c(1.64E-18, 4.82E-16, 0.11, 0.28, 0.91, 0.44)
 AdjR <- c(0.028, 0.024, 0.001, 5.96E-05, -0.0004, -0.0002)
 Fstat <- c(78.20, 66.68, 2.55, 1.16, 0.01, 0.60)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' )
-mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-GRS-confounders)") %>% 
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
+mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-GRS-confounders)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "5cm")   %>%
@@ -324,7 +324,7 @@ There were also a range of platelet proteins which were detected in the plasma (
 
 The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter \@ref(chemokine-platelets), where there was evidence that they can modulate platelet activation. There was also MR evidence that higher levels of MDC could contribute towards VTE pathophysiology. These chemokines were also included in the SomaLogic panel in the current chapter, therefore the effect of BMI on the circulating levels of these chemokines was explored. MDC was associated with BMI observationally, and the magnitude of effect was similar in the MR, however this estimate did not withstand multiple testing adjustment. It is possible that MDC could be an intermediate in between BMI and platelet function, however this analysis needs to be replicated in a larger cohort. There was no evidence to support TARC as an intermediate. Differences in regulation of MDC and TARC need to be further elucidated.
 
-Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. We therefore examined proteins grouped into clusters of similar features, compared BMI-protein estimates of each cluster with overall estimates and explored enrichment for genes related to disease. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to cardiovascular disease, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
+Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. Proteins grouped into clusters of similar features were examined, where the BMI-protein estimates of each cluster with overall estimates were compared and enrichment for genes related to disease were explored. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to cardiovascular disease, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
 
 This analysis has some limitations. The limitations that have arisen through use of the INTERVAL study have been discussed in section \@ref(INTERVAL-limitations). One of the limitations specific to the proteomic data in INTERVAL is that although it is one of largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR. Based on the detectable (P<1.4x10^-5^) median absolute observational effect size (0.13 SDs), our analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for our sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Additionally, the proteins examined are highly correlated and therefore changes in individual proteins may not fully be described. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL data set.
 
