--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -51,7 +51,7 @@ include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = N
 Mendelian randomization can therefore also be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of cardiovascular disease
-As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. Cardiovascular disease is used as a term to describe the group of diseases which affect the heart or blood vessels. Within cardiovascular disease there are various diseases which range in their clinical presentation and pathology. CHD (also known as coronary artery disease or ischaemic heart disease) is caused by a build up of plaques in the arteries (atherosclerosis). These build ups can lead to blockages in the arteries (arterial thrombosis), thereby causing a heart attack. Other types of cardiovascular disease include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Thrombi can also form in veins (venous thromboembolism/VTE), thereby causing deep venous thrombosis (DVT) when the thrombus is in the legs or pulmonary embolism when it is in the lungs. Arterial and venous thrombi both are composed of platelets, however arterial thrombosis has a much higher proportion (31%)[@Chernysh2020]. Although not one of the main components of venous thrombi, platelets are still involved in the pathology[@Koupenova2017a].
+As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. Cardiovascular disease is used as a term to describe the group of diseases which affect the heart or blood vessels. Within cardiovascular disease there are various diseases which range in their clinical presentation and pathology. CHD (also known as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These build ups can lead to blockages in the arteries (arterial thrombosis), thereby causing a heart attack. Other types of cardiovascular disease include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Thrombi can also form in veins (venous thromboembolism/VTE), thereby causing deep venous thrombosis (DVT) when the thrombus is in the legs or pulmonary embolism when it is in the lungs. Arterial and venous thrombi both are composed of platelets, however arterial thrombosis has a much higher proportion (31%)[@Chernysh2020]. Although not one of the main components of venous thrombi, platelets are still involved in the pathology[@Koupenova2017a].
 
 ## Higher BMI has a causal effect on ischaemic heart disease
 Studies which have used MR to estimate a causal effect have indicated that BMI may have an even greater effect on IHD than observational studies suggested. Nordestgaard et al. utilised single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate that 4kg/m^2^ higher BMI increases the odds of IHD by as much as 52%[@Nordestgaard2012]. Other studies which have used more specific measures of adiposity, such as waist hip ratio adjusted for BMI (WHRadjBMI), have also found evidence for a causal effect of adiposity on coronary heart disease risk[@Dale2017]. Further, higher BMI has been shown to have a causal relationship with more specific measures of cardiovascular events such as ischaemic stroke[@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE)[@Jimenez2021]. Despite evidence for causal relationships, changes which occur as a result of BMI which lead to these cardiovascular events are unclear.
@@ -60,7 +60,7 @@ Studies which have used MR to estimate a causal effect have indicated that BMI m
 There is extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL)[@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD[@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors which circulate that are mediating this association. There are thousands of detectable proteins which circulate in the blood[@Sun2018], which have a range of roles from inflammation to coagulation. It is likely that adiposity causes an alteration in such proteins, which may have a downstream effect on platelet function and cardiovascular risk. Assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease and identify druggable targets.
 
 ## Platelets are key cells in thrombosis
-Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis[@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation[@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change[@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines[@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation[@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR1) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC)[@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin[@Durrant2017]. Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding[@Rivera2009]. These key platelet receptors are shown in Figure \@ref(fig:platelet-activation-receptors). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis. This can cause a myocardial infarction and stroke.
+Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis[@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation[@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change[@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines[@Gear2003], whereas dense granules release molecules such as adenosine diphosphate (ADP), which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation[@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR1) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC)[@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin[@Durrant2017]. Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding[@Rivera2009]. These key platelet receptors are shown in Figure \@ref(fig:platelet-activation-receptors). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis. This can cause a myocardial infarction and stroke.
 
 (ref:caption-platelet-activation-receptors) **Key platelet receptors for platelet activation**. Figure made using BioRender.com.
 (ref:scaption-platelet-activation-receptors) Key platelet receptors for platelet activation
@@ -82,7 +82,7 @@ include_graphics(path = "figure/Bariatric_study/Platelet_activiation_integrin_p-
 
 As well as platelets aggregating to one another, platelets are also able to bind to leukocytes such as neutrophils. When activated, platelets express P-selectin. Neutrophils express P-selectin glycoprotein ligand-1 (PSGL-1)[@Zarbock2007] (Figure \@ref(fig:platelet-activation-background)), therefore these cells can form aggregates through these adhesion receptors. The extent of these interactions can also be used to measure platelet activation. This can be done under basal conditions or after stimulation with an agonist such as CRP. Firstly, neutrophils are gated based on their forward scatter (FSC) and using an antibody for the leukocyte common antigen (CD45). An antibody for the platelet receptor CD41 (integrin α~IIb~) is then used to detect the proportion of neutrophils bound to platelets. 
 
-Techniques such as Western Blotting can be used to quantify the levels of total protein or phosphoprotein. This can therefore be used to explore changes in signalling in platelets under basal conditions, or after stimulation with agonists or antagonists. PGE1 acts at a G~s~-coupled prostaglandin GPCR, which activates adenylyl cyclase and leads to subsequent production of cAMP. Protein kinase A (PKA) subsequently phosphorylates the vasodilator-stimulator phosphoprotein (VASP) at sites including Ser^157^ and Ser^239^[@Hezard2005]. The P2Y~12~ receptor acts at a G~i/o~ coupled receptor, therefore activating this receptor with ADP opposes the effects of PGE1. Measuring phosphorylation of VASP at these sites is used as an indicator of how well P2Y~12~ antagonists are inhibiting platelets. The lack of inhibition of VASP phosphorylation by ADP indicates more inhibition by drugs such as clopidogrel and ticagrelor[@Hezard2005].
+Techniques such as Western Blotting can be used to quantify the levels of total protein or phosphoprotein. This can therefore be used to explore changes in signalling in platelets under basal conditions, or after stimulation with agonists or antagonists. PGE1 acts at a G~s~-coupled prostaglandin G protein coupled receptor (GPCR), which activates adenylyl cyclase and leads to subsequent production of cAMP. Protein kinase A (PKA) subsequently phosphorylates the vasodilator-stimulator phosphoprotein (VASP) at sites including Ser^157^ and Ser^239^[@Hezard2005]. The P2Y~12~ receptor acts at a G~i/o~ coupled receptor, therefore activating this receptor with ADP opposes the effects of PGE1. Measuring phosphorylation of VASP at these sites is used as an indicator of how well P2Y~12~ antagonists are inhibiting platelets. The lack of inhibition of VASP phosphorylation by ADP indicates more inhibition by drugs such as clopidogrel and ticagrelor[@Hezard2005].
 
 Western blotting requires a lot of material and is limited by the number of proteins/phosphoproteins that can be detected at once. A solution to this issue is using Mass Spectrometry (MS). Using this method, platelets that have been isolated from blood are washed in a buffer and are lysed before MS analysis. This method enables detection of thousands of platelet proteins[@Huang2021], therefore providing extensive detail of the platelet environment. 
 
@@ -98,7 +98,7 @@ include_graphics(path = "figure/Intro_background/Sysmex_IPF.png", dpi = NA)
 ```
 
 ## Platelet primers
-Platelets express receptors for various circulating molecules. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1)[@Frystyk1995] and thrombopoietin (TPO)[@Maury2010a; @Blair2015]. There is evidence other chemokines may be able to activate platelets. The CCR4 receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17)[@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI increases the circulating levels of MDC[@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets through platelet aggregation and calcium mobilisation experiments[@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway[@Blair2015; @Pasquet2000]. In turn, this leads to phosphorylation and activation of protein kinase B (PKB/Akt) and an increase in aggregation[@Hemmings2015]. Another pathway which is important for platelet priming is the mitogen activated protein kinase (MAPK) pathway, in particular, the extracellular related kinases (ERKs)[@Ezumi1998]. It is possible that these pathways are also important in signalling via CCR4.
+Platelets express receptors for various circulating molecules. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1)[@Frystyk1995] and thrombopoietin (TPO)[@Maury2010a; @Blair2015]. There is evidence other chemokines may be able to activate platelets. The C-C motif chemokine receptor 4 (CCR4) receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17)[@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI increases the circulating levels of MDC[@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets through platelet aggregation and calcium mobilisation experiments[@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway[@Blair2015; @Pasquet2000]. This activation leads to recruitment of PH-domain proteins including protein kinase B (PKB/Akt) to the plasma membrane. PKB is subsequently phosphorylated on Threonine^308^ and Serine^473^ residues leading to its activation[@Hemmings2015]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. It is possible that these pathways are also important in signalling via CCR4.
 
 ## Mechanisms of obesity-related disease
 It is not fully understood how a high BMI might lead to changes in platelet function. Inflammatory mediators could be one such mechanism due to likely interactions between and inflammatory mediators in the blood. Obesity commonly presents with a state of low-grade chronic inflammation. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects[@Cercato2019; @Kern2001]. There is evidence that obesity is associated with increases in interleukin-6 (IL-6) and tumour necrosis factor-α (TNF-α)[@Esser2014]. Previous studies have identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP)[@Timpson2011]. More recent studies have used MR and have found an effect of BMI on a range of cytokines[@Kalaoja2021]. As platelets can be activated by inflammatory mediators and there is evidence for a causal relationship between BMI and CRP/cytokines, it is likely that inflammation could mediate this effect.
