--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -31,7 +31,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ```
 # Using observational and MR frameworks to determine the effect of body mass index on platelet characteristics {#BMI-platelets-INTERVAL}
 
-This work is published in the journal Platelets (add reference). I performed all analyses, created all figures and tables and wrote the manuscript. 
+This work is published in the journal Platelets[@Goudswaard2022]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
 As indicated in the background chapter (Chapter \@ref(background)), clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may play a role. 
@@ -44,7 +44,7 @@ In this chapter, data from the INTERVAL prospective cohort (N=33388) was used to
 
 (ref:caption-BMI-platelet-overview) **Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
-```{r BMI-platelet-overview, echo = FALSE , fig.scap="(ref:scaption-BMI-platelet-overview)", fig.cap="(ref:caption-BMI-platelet-overview)", out.width="90%"}
+```{r BMI-platelet-overview, echo = FALSE , fig.scap="(ref:scaption-BMI-platelet-overview)", fig.cap="(ref:caption-BMI-platelet-overview)", out.width="80%"}
 include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets.png", dpi = NA)
 ```
 
@@ -78,23 +78,24 @@ include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 ```
 
 ### Measurement of platelet traits
-Blood was taken by venipuncture into 3mL EDTA tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument[@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation[@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM)[@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
+Blood was taken by venipuncture into 3mL ethylenediamine tetraacetic acid (EDTA) tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument[@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation[@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM)[@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
 
 (ref:caption-Platelet-traits) **Platelet traits measured by Sysmex XN-1000**.
 (ref:scaption-Platelet-traits) Platelet traits measured by Sysmex XN-1000
-```{r Platelet-traits,  echo=FALSE}
+```{r Platelet-traits,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Name = c('P-LCR','H-IPF','PLT (F)','PLT (I)','PCT','PDW','IPC','IPF','MPV','SFL','FSC','SSC')
 FullName = c('Platelet large cell ratio','High fluorescence immature platelet fraction','Platelet count (PLT-F channel)','Platelet count (impedance channel)','Plateletcrit','Platelet distribution width' ,'Immature platelet count' ,'Immature platelet fraction','Mean platelet volume','Side fluorescence', 'Forward scatter','Side scatter')
 Deriv = c('(platelet number with volume>12 fL)/(platelet number of ordinary volume)  x 100', '(high fluorescence immature platelet number)/(platelet count)  x 100','Total number of platelets per litre','Total number of platelets per litre','Volume percentage of blood occupied by platelets','Standard deviation of platelet volume distribution, estimated as width at 20% modal height of platelet volume histogram','Immature platelet count','(Immature platelet number)/(platelet count)   x 100', 'Mean platelet volume','Side fluorescence measures the nucleic acid (mRNA) content of the platelet','Forward scatter is a measure of the size of the platelet' ,'Side scatter is a measure of the granularity of the platelet')
 
-Units <- c('%','%','10^9^/L','10^9^/L','%','fL','10^9^/L','%','fL','RFUs','RFUs','RFUs')
+Units <- c('%','%','10E9/L','10E9/L','%','fL','10E9/L','%','fL','RFUs','RFUs','RFUs')
 MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
 mytable = data.frame(cbind(Name, FullName, Deriv, Units, MeanSD))
 colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait',	'Units',	'Mean (SD)')
-mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-Platelet-traits)") %>% 
+mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Platelet-traits)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
+    kable_styling(font_size = 7) %>%
 column_spec(2, width = "4cm")   %>%
   column_spec(3, width = "6cm")   %>%
   landscape()
@@ -119,23 +120,23 @@ The COPTIC dataset in the current analysis included 2,518 participants (23 out o
 ## Results
 
 ### INTERVAL participant characteristics 
-Of INTERVAL participants included in the current study (N=33,388), 50.2 % were female. The mean age was 45.3 years (SD of 14.2 years, Table \@ref(tab:INT-participants-platelets)). The mean BMI was 26.4 kg/m2 (SD of 4.7 kg/m2). The majority of participants were never smokers (58.9 %), with 33.3% and 7.8 % reported as previous and current smokers, respectively. Nearly a third (32.7 %) of participants reported drinking alcohol at least three times a week. 
+Of INTERVAL participants included in the current study (N=33,388), 50.2 % were female. The mean age was 45.3 years (SD of 14.2 years, Table \@ref(tab:INT-participants-platelets)). The mean BMI was 26.4 kg/m^2^ (SD of 4.7 kg/m^2^). The majority of participants were never smokers (58.9 %), with 33.3% and 7.8 % reported as previous and current smokers, respectively. Nearly a third (32.7 %) of participants reported drinking alcohol at least three times a week. 
 
 (ref:caption-INT-participants-platelets) **Characteristics of included INTERVAL participants for BMI-platelet analyses**
 (ref:scaption-INT-participants-platelets) Characteristics of included INTERVAL participants for BMI-platelet analyses
-```{r INT-participants-platelets,  echo=FALSE}
+```{r INT-participants-platelets,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 f = c("Age", "Sex", "Male", "Female", "Weight (kg)", "Height (cm)", "Body mass index (kg/m2)", "Smoking frequency", "Never", "Previous", "Current", "Alcohol intake frequency", "Rarely", "Less than once a week", "One or two times a week", "Three to five times a week / most days")
 co = c( '45.3 (14.2)', NA, '49.8%','50.2%','78.2 (16.0)','171.8 (9.6)','26.4 (4.7)', NA,'58.9%','33.3%','7.8%',NA, '12.5%','17.1%','37.7%','32.7%')
 i = c(33388, 33388, NA, NA, 33455, 33388, 33388, 32867, NA, NA, NA, 29538, NA, NA, NA, NA)
 mytable = data.frame("Variable"  = f, "Mean (SD) or %" = co, "N" = i)
 colnames(mytable) <- c("Variable",  "Mean (SD) or %", "N" )
-mytable %>% kable(caption = "(ref:caption-INT-participants-platelets)", caption.short = "(ref:scaption-INT-participants-platelets)", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "(ref:caption-INT-participants-platelets)", format="latex", caption.short = "(ref:scaption-INT-participants-platelets)", booktabs = TRUE) %>%
   kable_classic_2(full_width = F) %>%
-  #kable_paper("hover", full_width = F)
+  kable_paper("hover", full_width = F) %>%
    add_indent(c(3, 4, 9, 10, 11, 13, 14, 15, 16), level_of_indent = 1) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "8cm")
+ column_spec(1, width = "8cm")
 ```
 
 ### Correlation between platelet traits in INTERVAL
@@ -150,10 +151,11 @@ include_graphics(path = "figure/BMI_platelets/Corrmatrix_dendrogram.pdf", dpi = 
 ### Observational associations between BMI and platelet traits in INTERVAL
 Linear regression was performed to determine whether a higher BMI was associated with a change in platelet characteristics. In the confounder adjusted linear regression (Table \@ref(tab:BMI-platelets-adjust)), BMI was positively associated with PCT (0.12 SD higher per SD higher BMI, 95% CI 0.11 to 0.13, P = 9.2 x 10^-88^) and platelet count (PLT (I) 0.11 SD higher per SD higher BMI, 95% CI 0.09 to 0.12, P = 1.0 x 10^-67^). The next strongest association with BMI was the association with SFL (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.07, P = 4.7x10^-23^). BMI also showed a positive association with IPC (0.06 SD higher per SD increase in BMI, 95% CI 0.05 to 0.08, P = 4.8x10^-22^). These results demonstrate that BMI is positively associated with PCT, PLT (I), SFL and IPC in this population. These estimates were very similar to the age and sex only adjusted estimates (Table \@ref(tab:BMI-platelets-unadjust)).
 
+
 (ref:caption-BMI-platelets-adjust) **Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption.** Βeta coefficient is the change in platelet measure in SDs per normalized SD increase in BMI. PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SFL = side fluorescence, IPC = immature platelet count, PDW = platelet distribution width, FSC = forward scatter, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, P-LCR = platelet large cell ration, SSC = side scatter, MPV = mean platelet volume. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.
 (ref:scaption-BMI-platelets-adjust) Observational associations between BMI and platelet measures adjusted for age, sex, smoking status and alcohol consumption
 
-```{r BMI-platelets-adjust,  echo=FALSE}
+```{r BMI-platelets-adjust,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Name = c('PCT','PLT (I)','PLT (F)','SFL','IPC','PDW','FSC','H-IPF','IPF','P-LCR','SSC','MPV')
 N = c(24562,26044,23921,26082,23909,24563,26082,26068,23909,27015,26082,24559)
@@ -166,17 +168,16 @@ CI <- c(0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.012,0.013,0.012,0.012,0.013)
 Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,'0.00','0.00',-0.01,-0.01)
 Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
 mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>% 
-  kable_classic_2(full_width = F) %>%
+colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>%
+ kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
 ```
 
-
 (ref:caption-BMI-platelets-unadjust) **Age and sex adjusted estimates for the association between BMI and platelet traits.** Βeta coefficient is the change in platelet measure in SDs per SD higher BMI. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.
 (ref:scaption-BMI-platelets-unadjust) Age and sex adjusted estimates for the association between BMI and platelet traits
-```{r BMI-platelets-unadjust,  echo=FALSE}
+```{r BMI-platelets-unadjust,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 FullName <- c('Plateletcrit','Platelet count (impedence channel)','Platelet count (PLT-F channel)','Side fluorescence','Immature platelet count' ,'Platelet distribution width' ,'Forward scatter','High fluorescence immature platelet fraction','Immature platelet fraction','Side scatter','Platelet large cell ratio','Mean platelet volume')
 Name = c('PCT','PLT (I)','PLT (F)','SFL','IPC','PDW','FSC','H-IPF','IPF','P-LCR','SSC','MPV')
@@ -190,8 +191,8 @@ CI <- c(0.011,0.011,0.012,0.011,0.012,0.012,0.011,0.012,0.012,0.011,0.011,0.012)
 Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,'-0.028',0.003,'-0.001','-0.002','-0.003')
 Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,'-0.005',0.027,0.022,0.021, 0.021)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE,  format = "latex", caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>% 
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Beta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE,  format = "latex", caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3.5cm")   %>%
@@ -216,8 +217,8 @@ CI <- c(0.021,0.001,0.011,0.017)
 LowerCI <- c(0.162,0.010,'-0.108',0.057)
 UpperCI <- c(0.205,0.012,'-0.085',0.090)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
-mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>% 
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
+mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
@@ -238,7 +239,7 @@ To estimate the causal effect of BMI on platelet characteristics, MR was perform
 
 (ref:caption-INT-GRS-confounders-platelets) **Association between genetic risk score for BMI with both BMI and covariables.** Beta coefficient is the change in outcome variable per unit increase in the genetic risk score for BMI.
 (ref:scaption-INT-GRS-confounders-platelets) Association between genetic risk score for BMI with both BMI and covariables
-```{r INT-GRS-confounders-platelets,  echo=FALSE}
+```{r INT-GRS-confounders-platelets,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 V = c("BMI (SDs)", "Age (years)", "Sex (1=female, 2=male)", "Smoking frequency (1=never, 2=previous, 3=current", "Alcohol intake frequency (1=rarely, 2=<1 a week, 3=1-2 times a week, 4=most days/every day)")
 N = c(33388, 33388, 33388, 32867, 29538)
@@ -248,8 +249,8 @@ P <- c('2.3E-312','2.2E-08','4.7E-01','9.2E-05','2.9E-15')
 AdjR <- c(0.042,0.001,'-1.4E-05',4.0E-4,0.002)
 Fstat <- c(1458.4,31.3,0.5,15.3,62.4)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' )
-mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-INT-GRS-confounders-platelets)") %>% 
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
+mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-INT-GRS-confounders-platelets)") %>%
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "6cm")   %>%
@@ -278,9 +279,9 @@ Upper <- c(0.139,0.122,0.108,0.110,0.103,0.091,0.088,0.093,0.086,0.084,0.073,0.0
 Wu <- c(0.973,0.672,0.774,0.0003,0.334,0.001,0.527,0.936,0.746,0.001,0.433,0.223)
 Fstat <- c(676,641,652,706,603,729,678,625,614,671,661,650)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper, Wu, Fstat))
-colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
 mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
-  kable_classic_2(full_width = F) %>%
+  kable_classic_2(full_width = F, font_size = 8) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3cm")   %>%
   landscape()
@@ -295,9 +296,10 @@ include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi 
 ### Stratifying BMI and IPC associations by BMI group
 We explored whether associations between BMI and IPC varied across NHS BMI groups (underweight <18.5 kg/m^2^, healthy weight 18.5-24.9kg/m^2^, overweight 25-29.9 kg/m^2^, obesity 30+ kg/m^2^). IPC had consistent BMI effects across observational and MR analyses. Stratifying by BMI category suggested that the strongest association between BMI and IPC was the overweight category (Table \@ref(tab:BMI-platelets-stratified)).
 
+\blandscape
 (ref:caption-BMI-platelets-stratified) **Associations between BMI and immature platelet count (IPC) stratified by NHS BMI category.** Beta coefficient is the change in IPC (SDs) per SD increase in BMI
 (ref:scaption-BMI-platelets-stratified) Associations between BMI and immature platelet count (IPC) stratified by NHS BMI category
-```{r BMI-platelets-stratified,  echo=FALSE}
+```{r BMI-platelets-stratified,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Adjustment <- c('Age and sex','Age and sex','Age and sex','Age and sex','Fully adjusted','Fully adjusted','Fully adjusted','Fully adjusted' )
 Group = c('Underweight','Healthy','Overweight','Obese','Underweight','Healthy','Overweight','Obese')
@@ -312,13 +314,14 @@ Lower <- c(-1.434,0.005,0.027,-0.031,-0.311,-0.004,0.000,-0.051)
 Upper <- c(1.837,0.074,0.158,0.096,0.849,0.069,0.140,0.086)
 mytable = data.frame(cbind(Adjustment, Group, BMIrange, N, Beta, SE, P, R, CI, Lower, Upper))
 colnames(mytable) <- c('Adjustment', 'Group', 'BMI range',	'N',	'Beta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "latex", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE  ) %>% 
-  kable_classic_2(full_width = F) %>%
- kable_styling(full_width = TRUE) %>%
-   column_spec(1, width = "2.5cm")   %>%
-     column_spec(2, width = "2.5cm")   %>%
- landscape()
+mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "markdown", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE )  
+ # kable_classic_2(full_width = F) %>%
+# kable_styling(full_width = TRUE) %>%
+  # column_spec(1, width = "2.5cm")   %>%
+  #   column_spec(2, width = "2.5cm")   %>%
+# landscape()
 ```
+\elandscape
 
 ### Follow-up associations between IPC and whole blood aggregation in COPTIC
 Given evidence for a causal effect of BMI on IPC in the MR analysis, we sought to evaluate the relationship between IPC and platelet activity as a biological parameter of clinical relevance. Whilst this analysis could not be conducted in INTERVAL due to a lack of suitable data, we were able to utilize data from the COPTIC study to address this question. The COPTIC study is a cohort of cardiac surgery patients, with samples taken pre-surgery. These participants have whole blood aggregation measured, therefore making it possible to determine associations between IPC and aggregation in a clinical setting.
@@ -328,27 +331,27 @@ The total number of COPTIC participants was 2,541. Of these, 2,518 participants 
 
 (ref:caption-COPTIC-participants-platelets) **Characteristics of COPTIC study participants**
 (ref:scaption-COPTIC-participants-platelets) Characteristics of COPTIC study participants
-```{r COPTIC-participants-platelets,  echo=FALSE}
+```{r COPTIC-participants-platelets,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
-f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 10^9^/L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 10^9^/L)')
+f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 10E9 /L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 10E9/L)')
 co = c('66.7 (11.9)', NA, '24.9 %','75.1 %','27.9 (4.6)', NA,' 38.5 %','47.4 %','8.3 %','1.9 %','3.9 %', NA, '26.6 %','50.7 %','22.5 %','0.2 %','138.2 (50.1)','53.0 (28.2)','86.9 (62.1)','200.0 (50.1)','209.8 (60.5)','10.6 (1.0)','3.2 (1.9)' ,'6.3 (3.4)')
 i = c(2502,2518,NA,NA,2422,2469,NA,NA,NA,NA,NA,2467,NA,NA,NA,NA,2377,2363,2375,2373,2409,2400,2379,2383)
 mean <- c('63.9 (16.1)',NA, '38.2 %' ,'61.8 %','27.2 (4.9)', NA, '50.8 %','38.4 %','6.3 %','2.1 %','2.4 %', NA, '100 %', NA, NA, NA,'141 (46.5)','56.8 (32.3)','148.9 (52.4)','198.7 (50.0)','200.9 (57.6)','10.6 (0.98)','3.3 (2.0)','6.2 (3.3)')
 n <- c(655,655,NA,NA,649,654,NA,NA,NA,NA,NA,655,NA,NA,NA,NA,625,621,623,623,637,634,628,629)
 mytable = data.frame("Variable"  = f, "Mean (SD) or % (all)" = co, "N (all)" = i, "Mean (SD) or % (included)" = mean, "N (included)" = n)
 colnames(mytable) <- c("Variable",  "Mean (SD) or % (all)", "N (all)", "Mean (SD) or % (included)", "N (included)" )
-mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>% 
-  kable_classic_2(full_width = F) %>%
-  #kable_paper("hover", full_width = F)
+mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>%
+ kable_classic_2(full_width = F) %>%
+  kable_paper("hover", full_width = F) %>%
    add_indent(c(3, 4, 7:11, 13:16), level_of_indent = 1) %>%
  kable_styling(full_width = TRUE) %>%
-column_spec(1, width = "4cm")
+ column_spec(1, width = "4cm")
 ```
 
+\blandscape
 (ref:caption-BMI-platelets-COPTIC) **Association between BMI and platelet parameters in COPTIC (adjusted for age, sex, smoking).** Beta coefficient is the change in platelet measure ins SDs per SD higher BMI.
 (ref:scaption-BMI-platelets-COPTIC) Association between BMI and platelet parameters in COPTIC (adjusted for age, sex, smoking)
-
-```{r BMI-platelets-COPTIC,  echo=FALSE}
+```{r BMI-platelets-COPTIC,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Outcome <- c('MPV', 'IPC', 'PLT', 'IPF')
 N = c(627, 622, 630, 621)
@@ -360,12 +363,13 @@ CI <- c(0.07, 0.07, 0.07, 0.07)
 Lower <- c("0.00", -0.01, -0.03, -0.04)
 Upper <- c(0.15, 0.14, 0.10, 0.11)
 mytable = data.frame(cbind(Outcome, N, Beta, SE, P, R, CI, Lower, Upper))
-colnames(mytable) <- c('Outcome',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "latex", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) %>% 
-  kable_classic_2(full_width = F) %>%
- kable_styling(full_width = TRUE) %>%
-  landscape()
+colnames(mytable) <- c('Outcome',	'N',	'Beta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "markdown", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) 
+ # kable_classic_2(full_width = F) %>%
+# kable_styling(full_width = TRUE) %>%
+ # landscape()
 ```
+\elandscape
 
 ### Association between IPC and aggregation in COPTIC cohort
 
